gcc/testsuite/rust/rustc/ui/pub/pub-ident-struct-with-lifetime.rs
pub S<'a> {
// { dg-error "" "" { target *-*-* } .-1 }
}
fn main() {}

